--- a/CreditoCobro/CreditoCobro.AplicacionPatrono/App.config
+++ b/CreditoCobro/CreditoCobro.AplicacionPatrono/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="creditocobroEntities" connectionString="metadata=res://*/CreditoCobroContexto.csdl|res://*/CreditoCobroContexto.ssdl|res://*/CreditoCobroContexto.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=creditocobro.database.windows.net;initial catalog=creditocobro;persist security info=True;user id=ccadmin;password=Admin2017!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
