--- a/CreditoCobro/CreditoCobro.DataAccess/CreditoCobro.Datos.csproj
+++ b/CreditoCobro/CreditoCobro.DataAccess/CreditoCobro.Datos.csproj
@@ -47,10 +47,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="B_Cliente.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="B_Credito.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="B_Institucion.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="B_Proyeccion.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="CreditoCobroContext.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CreditoCobroContext.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CreditoCobroContext.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
     </Compile>
     <Compile Include="CreditoCobroContext.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -58,6 +75,12 @@
       <DependentUpon>CreditoCobroContext.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="P_Cuota.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="P_Empleado.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -79,6 +102,12 @@
     <Content Include="CreditoCobroContext.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CreditoCobroContext.Context.cs</LastGenOutput>
+      <DependentUpon>CreditoCobroContext.edmx</DependentUpon>
+    </Content>
+    <Content Include="CreditoCobroContext.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CreditoCobroContext.edmx</DependentUpon>
+      <LastGenOutput>CreditoCobroContext.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
