--- a/CreditoCobro/CreditoCobro.AplicacionBanco/CreditoCobro.AplicacionBanco.csproj
+++ b/CreditoCobro/CreditoCobro.AplicacionBanco/CreditoCobro.AplicacionBanco.csproj
@@ -139,5 +139,8 @@
   <ItemGroup>
     <None Include="Resources\menu1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\menu2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
