--- a/CreditoCobro/CreditoCobro.DTO/CreditoCobro.DTO.csproj
+++ b/CreditoCobro/CreditoCobro.DTO/CreditoCobro.DTO.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DtoCliente.cs" />
+    <Compile Include="DtoCredito.cs" />
     <Compile Include="DtoProyeccion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
