--- a/CreditoCobro/CreditoCobro.DataAccess/App.config
+++ b/CreditoCobro/CreditoCobro.DataAccess/App.config
@@ -11,4 +11,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <connectionStrings>
+    <add name="Entities" connectionString="metadata=res://*/CreditoCobroContext.csdl|res://*/CreditoCobroContext.ssdl|res://*/CreditoCobroContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=creditocobro.database.windows.net;initial catalog=creditocobro;persist security info=True;user id=ccadmin;password=Admin2017!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
