--- a/CreditoCobro/CreditoCobro.AplicacionPatrono/CreditoCobro.AplicacionPatrono.csproj
+++ b/CreditoCobro/CreditoCobro.AplicacionPatrono/CreditoCobro.AplicacionPatrono.csproj
@@ -57,6 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmInfoCreditos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInfoCreditos.Designer.cs">
+      <DependentUpon>FrmInfoCreditos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLoginP.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +71,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmInfoCreditos.resx">
+      <DependentUpon>FrmInfoCreditos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLoginP.resx">
       <DependentUpon>FrmLoginP.cs</DependentUpon>
     </EmbeddedResource>
