--- a/CreditoCobro/CreditoCobro.AplicacionPatrono/CreditoCobro.AplicacionPatrono.csproj
+++ b/CreditoCobro/CreditoCobro.AplicacionPatrono/CreditoCobro.AplicacionPatrono.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -103,6 +104,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\user3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CreditoCobro.DTO\CreditoCobro.DTO.csproj">
+      <Project>{A2BA3CE6-B13A-4877-BD9C-C6EAF3705D36}</Project>
+      <Name>CreditoCobro.DTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
