--- a/CreditoCobro/CreditoCobro.DataAccess/CreditoCobro.Datos.csproj
+++ b/CreditoCobro/CreditoCobro.DataAccess/CreditoCobro.Datos.csproj
@@ -93,6 +93,9 @@
     <Compile Include="P_Empleado.cs">
       <DependentUpon>CreditoCobroContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>CreditoCobroContext.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
