--- a/CreditoCobro/CreditoCobro.NegocioBanco/CreditoCobro.NegocioBanco.csproj
+++ b/CreditoCobro/CreditoCobro.NegocioBanco/CreditoCobro.NegocioBanco.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Clientes.cs" />
     <Compile Include="Credito.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proyecciones.cs" />
   </ItemGroup>
