--- a/CreditoCobro/CreditoCobro.Negocio/CreditoCobro.NegocioPatrono.csproj
+++ b/CreditoCobro/CreditoCobro.Negocio/CreditoCobro.NegocioPatrono.csproj
@@ -55,11 +55,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="clsLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CreditoCobro.DataAccess\CreditoCobro.Datos.csproj">
+      <Project>{ADD298C4-1B7F-45F3-896B-CA476194C8CB}</Project>
+      <Name>CreditoCobro.Datos</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
